--- a/css/animations.css
+++ b/css/animations.css
@@ -4,7 +4,7 @@
 
 /* animate ngRepeat in phone listing */
 
-.phone-listing.ng-enter,
+/*.phone-listing.ng-enter,
 .phone-listing.ng-leave,
 .phone-listing.ng-move {
   -webkit-transition: 0.5s linear all;
@@ -36,7 +36,7 @@
   height: 0;
   padding-top: 0;
   padding-bottom: 0;
-}
+}*/
 
 /* cross fading between routes with ngView */
 
@@ -44,8 +44,8 @@
   position: relative;
 }
 
-.view-frame.ng-enter,
-.view-frame.ng-leave {
+.view-frame .ng-enter,
+.view-frame .ng-leave {
   background: white;
   position: absolute;
   top: 0;
@@ -53,7 +53,7 @@
   right: 0;
 }
 
-.view-frame.ng-enter {
+.view-frame .ng-enter {
   -webkit-animation: 0.5s fade-in;
   -moz-animation: 0.5s fade-in;
   -o-animation: 0.5s fade-in;
@@ -61,7 +61,7 @@
   z-index: 100;
 }
 
-.view-frame.ng-leave {
+.view-frame .ng-leave {
   -webkit-animation: 0.5s fade-out;
   -moz-animation: 0.5s fade-out;
   -o-animation: 0.5s fade-out;
